assets/css/style.css
:root {
    --primary: gray;
    --secondary: #3400ad;
    --tertiary: rgb(8, 128, 175);
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    background-color: var(--primary);
    font-family: "century gothic",Verdana,sans-serif;
}

header {
    background-color: var(--tertiary);
    padding: 20px 35px;
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
    top: 0;
    background-image: url("../images/hero.jpg");
    background-size: cover;
    background-position: center;
    background-attachment: fixed;
    background-position: 80%;
}

header a {
    text-decoration: none;
    color: var(--secondary);
}

header h1 a {
    font-weight: lighter;
    font-size: 36px;
    color: var(--secondary);
    margin: 0;
    transition: color 0s ease-in-out 0s;
}

header h1 a:hover {
    color: var(--primary);
}

nav {
    margin: 7px 0;
}

nav ul {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;
    list-style: none;
}

nav ul li a {
    padding: 10px 15px;
    font-weight: lighter;
    font-size: 25px;
    transition: color 0s ease-in-out 0s;
    text-decoration: underline;
}

nav ul li a:hover {
    color: var(--primary);
}

h2 {
    color: var(--primary);
    font-family: "century gothic",Verdana,sans-serif;
}

/*Hero changed to include the nav bar and header*/
.hero {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    align-items: flex-start;
    background-image: url("../images/hero.jpg");
    background-size: cover;
    background-position: center;
    background-attachment: fixed;
    background-position: 100%;
    height: 600px;
    background-attachment: fixed;
    background-position: 80%;
}
/*hero end*/

.container {
    margin: 100px auto;
    padding-right: 100px;
    width: 100%;
    display: flex;
    flex-wrap: wrap;
    flex: 1 100%;
    align-items: center;
    justify-content: center;
}

/* about me section */

section h2 {
    color: var(--secondary);
    font-size: 50px;
    font-weight: lighter;
    text-align: right;
    padding-top: 30px;
    padding-right: 30px;
    flex: 1 20%;
}

/*hover added to about me*/
section h2:hover {
    opacity: 0.7;
}

.aboutme {
    flex: 2 70%;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    padding-left: 30px;
    border-left: 5px solid var(--secondary);
}

.aboutme p {
    width: 70%;
    margin-bottom: 20px;
    color: var(--secondary);
    line-height: 1.7;
    font-size: 18px;
    padding-top: 20px;
}

.about-img {
    margin-left: 20px;
}

.about-img img {
    max-width: 200px;
    height: auto;
    float: left;
    margin: 20px 20px 0 0;
    flex: 2 0 0;
}

.about-img img:hover {
    opacity: 0.5;
}
/*about me end

/* work section */
main h2 {
    color: var(--secondary);
    font-size: 50px;
    font-weight: lighter;
    text-align: right;
    padding-top: 30px;
    flex: 1 20%;;
    padding-right: 30px;
}

.img-container {
    display: flex;
    flex: 2 70%;
    flex-wrap: wrap;
    justify-content: space-between;
    border-left: 5px solid var(--secondary);
    padding-left: 30px;
}

.img-container .firstwork {
    flex: 1 100%;
    position: relative;
    display: inline-block;
    background-color: var(--secondary);
    padding: 15px;
    margin-bottom: 10px;
}

.firstwork img {
    max-width: 100%;
    display: block;
}


.firstwork a {
    flex: 0 0 50%;
    max-width: 100%;
    max-height: 100%;
    display: flex;
}

.img-container .work {
    flex: 1 50%;
    border: 5px solid var(--tertiary);
    position: relative;
    display: inline-block;
    background-color: var(--secondary);
    padding: 15px;
    margin-bottom: 10px;
    background-size: cover;
}

.firstwork.img .text{
    position: relative;
    top: 50px;
}


.firstwork.img{
    background-image: url(/assets/images/runbuddy.PNG);
    background-size: cover;
    height: 600px;
    background-repeat: no-repeat;
    background-position: top right;
}

.work.img-1{
    background-image: url(/assets/images/horiseon.png);
}

.work.img-2{
    background-image: url(/assets/images/ddten.png);
    background-position: top right;
    background-size: contain;
    background-repeat: no-repeat;
}

.work.img-3{
    background-image: url(/assets/images/javascript.png);
    background-position: top right;
    background-size: contain;
    background-repeat: no-repeat;
}

.work.img-4{
    background-image: url(/assets/images/python.png);
    background-position: top right;
    background-size: contain;
    background-repeat: no-repeat;
}

.work img {
    max-width: 100%;
    display: block;
}

/*adds the ability to click href*/
.work a {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    display: block;
/*sends objects to the front or back based on number, low being the closest*/  
    z-index: 1;
}


.img-container .text {
    margin: 0 30px;
    display: inline-block;
    padding: 20px;
    background-color: var(--tertiary);
}

.text h3 {
    color: var(--secondary);
    font-size: 1.2vw;
    font-weight: lighter;
    padding-top: 10px;
    padding-right: 5px;
    padding-bottom: 15px;
    padding-left: 40px;
}

.text p {
    color: var(--secondary);
    font-family: "century gothic",Verdana,sans-serif;
    font-size: .8vw;
    font-weight: lighter;
    padding-top: 0px;
    padding-right: auto;
    padding-bottom: 40px;
    padding-left: 40px;
} 
/* work section end */
/* contact me section */

article h2 {
    color: var(--secondary);
    font-size: 50px;
    font-family: "century gothic",Verdana,sans-serif;
    font-weight: lighter;
    text-align: right;
    padding-top: 30px;
    flex: 1 30%;
    padding-right: 30px;
}

article h2:hover {
    opacity: 0.5;
}

.contactme {
    flex: 2 70%;
    display: flex;
    flex-wrap: wrap;
    padding-left: 10px;
    border-left: 5px solid var(--secondary);
}

.contactme p {
    margin: 20px 20px;
    line-height: 1.5;
    color: var(--primary);
    width: 100%;
    font-size: 20px;
    text-align: left;
}

.contactme a {
    text-decoration: none;
    color: var(--secondary);
    transition: color 0.0s ease-in-out 0s;
}

.contactme a:hover {
    color: var(--tertiary);
}
/*contact me end*/

/* footer */

footer {
    width: 100%;
    padding: 40px 35px;
}

footer p {
    font-family: 'Courier New', Courier, monospace;
    font-weight: lighter;
    font-size: 14px;
    text-align: center;
    color: var(--secondary);
    margin: 0;
}

/* media query */

@media screen and (max-width: 980px) {
    header {
        padding-bottom: 0;
        justify-content: center;
        position: relative;
    }

    header h1 {
        width: 100%;
        text-align: center;
    }

    header nav ul {
        margin-top: 20px;
        width: 100%;
        justify-content: center;
        padding-bottom: 20px;
    }

    header nav ul li a {
        font-size: 16px;
    }

    footer p {
        text-align: center;
        width: 100%;
    }

    .hero {
        margin-bottom: 0px;
    }

    .container {
        margin: 20px auto;
        padding-left: 100px;
        padding-right: 100px;
        width: 100%;
        display: flex;
        flex-wrap: wrap;
        flex: 0 100%;
        align-items: flex-start;
        justify-content: center;
    }

    .about-me h2,
    .showcase h2,
    .contact-me h2 {
        display: flex;
        justify-content: center;
        text-align: center;
        width: 60%;
        border-bottom: 1px solid var(--primary);
        margin-bottom: 20px;
        padding-right: 0;
        padding-bottom: 20px;
    }

    .aboutme {
        flex: 1 100%;
        align-items: center;
        justify-content: center;
        border: none;
        padding: 0;
    }

    .about-img {
        display: flex;
        justify-content: center;
        padding: 0 20px 10px 0;
    }

    .img-container {
        flex: 1 100%;
        width: 100%;
        height: 100%;
        min-width: 400px;
        border: none;
        margin: 0;
        padding: 0;
    }

    .img-container .firstwork,
    .img-container .work {
        flex: 0 100%;
        width: 70%;
        min-width: 400px;
        border: none;
        margin: 0;
        padding: 15px;
    }

    .contactme {
        border: none;
    }

    .text h3 {
        font-size: 16px;
        padding-top: 20px;
        padding-right: 20px;
        padding-bottom: 15px;
        padding-left: 20px;
    }
    
    .text p {
        font-size: 16px;
        padding-top: 0px;
        padding-right: 20px;
        padding-bottom: 20px;
        padding-left: 20px;
    }
}

@media screen and (max-width: 768px) {
    .hero {
        margin-bottom: 20px;
    }
}

@media screen and (max-width: 575px) {
    .about-me h2,
    .showcase h2,
    .contact-me h2 {
        font-size: 26px;
        width: 100%
    }

    .aboutme p {
        font-size: 14px;
        width: 100%;
    }

    .contactme {
        padding: 0;
    }

    .contactme p {
        font-size: 14px;
        width: 70%;
    }

    .contactme img {
        width: 25px;
        height: 25px;
        float: left;
        margin: 0px 20px 7px 0;
    }
}

